fix: correct Prisma client path in backend Dockerfile for pnpm
- Fixed COPY command to use .pnpm directory structure
- Added explicit copy of @prisma directory
- Resolves Docker build failure with pnpm package manager
- Backend Docker image now builds successfully

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -109,6 +109,8 @@ jobs:
           file: ./backend/Dockerfile
           push: false
           tags: creditjambo-backend:latest
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
       - name: Build Frontend Docker Image
         uses: docker/build-push-action@v5
@@ -117,4 +119,6 @@ jobs:
           file: ./frontend/Dockerfile
           push: false
           tags: creditjambo-frontend:latest
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
