--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -34,7 +34,10 @@ RUN pnpm install --frozen-lockfile --prod
 
 # Copy built application from builder
 COPY --from=builder /app/dist ./dist
-COPY --from=builder /app/node_modules/.prisma ./node_modules/.prisma
+
+# Copy Prisma client from builder (pnpm stores it in .pnpm directory)
+COPY --from=builder /app/node_modules/.pnpm ./node_modules/.pnpm
+COPY --from=builder /app/node_modules/@prisma ./node_modules/@prisma
 
 # Copy Prisma schema for migrations
 COPY prisma ./prisma
