--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,42 +1,55 @@
-# Build stage
-FROM node:20-alpine AS builder
+# syntax=docker.io/docker/dockerfile:1
+
+FROM node:20-alpine AS base
+
+# 1. Install dependencies only when needed
+FROM base AS deps
+# Check https://github.com/nodejs/docker-node/tree/b4117f9333da4138b03a546ec926ef50a31506c3#nodealpine to understand why libc6-compat might be needed.
+RUN apk add --no-cache libc6-compat
 
 WORKDIR /app
 
-# Copy package files
-COPY package.json package-lock.json ./
+# Install dependencies based on the preferred package manager
+COPY package.json yarn.lock* package-lock.json* pnpm-lock.yaml* .npmrc* ./
+RUN \
+  if [ -f yarn.lock ]; then yarn --frozen-lockfile; \
+  elif [ -f package-lock.json ]; then npm ci; \
+  elif [ -f pnpm-lock.yaml ]; then corepack enable pnpm && pnpm i; \
+  else echo "Lockfile not found." && exit 1; \
+  fi
 
-# Install dependencies
-RUN npm ci
 
-# Copy source code
+# 2. Rebuild the source code only when needed
+FROM base AS builder
+WORKDIR /app
+COPY --from=deps /app/node_modules ./node_modules
 COPY . .
-
-# Build the application
+# Copy environment files if they exist
+COPY .env.local* .env.production* ./
 RUN npm run build
 
-# Production stage
-FROM node:20-alpine
-
+# 3. Production image, copy all the files and run next
+FROM base AS runner
 WORKDIR /app
 
-# Copy package files
-COPY package.json package-lock.json ./
+ENV NODE_ENV=production
 
-# Install production dependencies only
-RUN npm ci --only=production
+RUN addgroup -g 1001 -S nodejs
+RUN adduser -S nextjs -u 1001
 
-# Copy built application from builder
-COPY --from=builder /app/.next ./.next
 COPY --from=builder /app/public ./public
 
-# Expose port
+# Automatically leverage output traces to reduce image size
+# https://nextjs.org/docs/advanced-features/output-file-tracing
+COPY --from=builder --chown=nextjs:nodejs /app/.next/standalone ./
+COPY --from=builder --chown=nextjs:nodejs /app/.next/static ./.next/static
+
+
+USER nextjs
+
 EXPOSE 3000
 
-# Health check
-HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
-  CMD wget --quiet --tries=1 --spider http://localhost:3000 || exit 1
+ENV PORT=3000
 
-# Start the application
-CMD ["npm", "start"]
+CMD ["sh", "-c", "HOSTNAME=0.0.0.0 node server.js"]
 
