fix: resolve ts-node not found issue in Docker seed command
- Updated Dockerfile to single-stage build with all dependencies
- Changed prisma:seed script to use ts-node directly
- Added pnpm configuration for proper dependency handling
- Updated docker-compose.yml to run migrations and seed on startup
- Updated docker-compose.dev.yml with same seed configuration
- Database now seeds automatically when containers start
- Test data includes 3 users, 3 savings accounts, 2 credits, 2 transactions, 3 notifications

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -10,7 +10,7 @@ services:
       POSTGRES_PASSWORD: 123456
       POSTGRES_DB: creditjambo_client
     ports:
-      - "5432:5432"
+      - "5433:5432"
     volumes:
       - postgres_data_dev:/var/lib/postgresql/data
     healthcheck:
@@ -49,7 +49,7 @@ services:
     networks:
       - creditjambo-network-dev
     restart: unless-stopped
-    command: pnpm start:dev
+    command: sh -c "pnpm prisma:migrate && pnpm seed && pnpm start:dev"
 
 volumes:
   postgres_data_dev:
