--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,15 +1,16 @@
-# Build stage
-FROM node:20-alpine AS builder
+FROM node:20-alpine
+
+RUN npm install -g pnpm
 
 WORKDIR /app
 
 # Copy package files
-COPY package.json pnpm-lock.yaml ./
+COPY pnpm-lock.yaml package.json ./
 
 # Install dependencies
-RUN npm install -g pnpm && pnpm install --frozen-lockfile
+RUN pnpm install --frozen-lockfile
 
-# Copy source code
+# Copy source code and configuration files
 COPY . .
 
 # Generate Prisma client
@@ -18,31 +19,7 @@ RUN pnpm prisma:generate
 # Build the application
 RUN pnpm build
 
-# Production stage
-FROM node:20-alpine
-
-WORKDIR /app
-
-# Install pnpm
-RUN npm install -g pnpm
-
-# Copy package files
-COPY package.json pnpm-lock.yaml ./
-
-# Install production dependencies only
-RUN pnpm install --frozen-lockfile --prod
-
-# Copy built application from builder
-COPY --from=builder /app/dist ./dist
-
-# Copy Prisma client from builder (pnpm stores it in .pnpm directory)
-COPY --from=builder /app/node_modules/.pnpm ./node_modules/.pnpm
-COPY --from=builder /app/node_modules/@prisma ./node_modules/@prisma
-
-# Copy Prisma schema for migrations
-COPY prisma ./prisma
-
-# Expose port
+# Expose the port the app runs on
 EXPOSE 3001
 
 # Health check
@@ -50,5 +27,5 @@ HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
   CMD node -e "require('http').get('http://localhost:3001/api/health', (r) => {if (r.statusCode !== 200) throw new Error(r.statusCode)})"
 
 # Start the application
-CMD ["pnpm", "start:prod"]
+CMD ["node", "dist/src/main.js"]
 
