--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,7 +35,7 @@ services:
       JWT_EXPIRES_IN: 15m
       JWT_REFRESH_SECRET: your-super-secret-refresh-key-change-this-in-production
       JWT_REFRESH_EXPIRES_IN: 7d
-      CORS_ORIGIN: http://localhost:3000,http://localhost:3003
+      CORS_ORIGIN: "http://localhost:3000,http://localhost:3003"
       THROTTLE_TTL: 60
       THROTTLE_LIMIT: 10
     ports:
