refactor: move seed credentials to environment variables
- Extract admin email and password to SEED_ADMIN_EMAIL and SEED_ADMIN_PASSWORD
- Extract customer password to SEED_CUSTOMER_PASSWORD
- Add environment variables to docker-compose.yml and docker-compose.dev.yml
- Update .env.example with new seed configuration variables
- Credentials are now configurable per environment instead of hardcoded
- Seed output displays credentials from environment variables

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -17,3 +17,8 @@ CORS_ORIGIN=http://localhost:3000,http://localhost:3003
 # Rate Limiting
 THROTTLE_TTL=60
 THROTTLE_LIMIT=10
+
+# Database Seeding
+SEED_ADMIN_EMAIL=admin@creditjambo.com
+SEED_ADMIN_PASSWORD=Password123!
+SEED_CUSTOMER_PASSWORD=Password123!
